--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "An intelligent chatbot with observability integration",
   "main": "dist/server.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && webpack",
     "start": "node dist/server.js",
-    "dev": "ts-node-dev --respawn src/server.ts",
+    "dev": "concurrently \"ts-node-dev --respawn src/server.ts\" \"webpack serve\"",
+    "dev:server": "ts-node-dev --respawn src/server.ts",
+    "dev:client": "webpack serve",
     "test": "jest"
   },
   "keywords": [
@@ -24,6 +26,8 @@
     "@opentelemetry/auto-instrumentations-node": "^0.36.4",
     "@opentelemetry/exporter-trace-otlp-http": "^0.35.1",
     "@opentelemetry/sdk-node": "^0.35.1",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "axios": "^1.3.5",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -33,6 +37,8 @@
     "jsonwebtoken": "^9.0.0",
     "langchain": "^0.0.73",
     "openai": "^3.2.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.2",
     "winston": "^3.8.2"
@@ -45,10 +51,19 @@
     "@types/node": "^18.15.11",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^10.0.0",
+    "concurrently": "^9.1.2",
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.3",
     "jest": "^29.5.0",
+    "style-loader": "^4.0.0",
     "ts-jest": "^29.1.0",
+    "ts-loader": "^9.5.2",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0"
   }
 }
